@@ -1,40 +1,37 @@
 package io.monkeypatch.untangled.utils;
 
-import io.netty.channel.ChannelOption;
 import io.netty.handler.logging.LogLevel;
-import io.netty.handler.ssl.SslContextBuilder;
-import io.netty.handler.timeout.ReadTimeoutHandler;
-import io.netty.handler.timeout.WriteTimeoutHandler;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import reactor.netty.http.HttpProtocol;
 import reactor.netty.http.client.HttpClient;
 import reactor.netty.resources.ConnectionProvider;
-import reactor.netty.tcp.SslProvider;
-import reactor.netty.tcp.TcpResources;
-import reactor.netty.tcp.TcpSslContextSpec;
+import reactor.netty.tcp.TcpClient;
 import reactor.netty.transport.logging.AdvancedByteBufFormat;
 import reactor.util.Logger;
 import reactor.util.Loggers;
 
 import javax.net.ssl.SSLException;
-import java.io.*;
-import java.net.HttpURLConnection;
+import java.io.ByteArrayOutputStream;
+import java.io.EOFException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.InetSocketAddress;
 import java.net.SocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.ByteBuffer;
-import java.nio.CharBuffer;
 import java.nio.channels.AsynchronousChannelGroup;
 import java.nio.channels.AsynchronousSocketChannel;
 import java.nio.channels.SocketChannel;
-import java.nio.charset.Charset;
-import java.nio.charset.CharsetDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.Objects;
-import java.util.Scanner;
-import java.util.concurrent.*;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -44,10 +41,9 @@ import static io.monkeypatch.untangled.utils.Log.println;
 public class IO {
 
     public final static int DEMO_SERVER_PORT = 7001;
-    public final static String DEMO_SERVER_URL = "http://localhost:" + DEMO_SERVER_PORT;
+    public final static String DEMO_SERVER_URL = "http://192.168.86.41:" + DEMO_SERVER_PORT;
 
     public static final String HEADERS_TEMPLATE = "%s /%s HTTP/1.0\r\nAccept: %s\r\nContent-Length: %s\r\nContent-Type: text/plain\r\n";
-    public static final String EMPTY = "";
 
     public static final long MAX_ETA_MS = 120_000;
     public static final int MAX_SIZE = 10 * 1024 * 1024;
@@ -64,9 +60,9 @@ public class IO {
         elasticServiceExecutor = Executors.newCachedThreadPool(new PrefixedThreadFactory("service"));
     }
 
-    public static InputStream blockingRequest(String url, String headers) throws IOException {
+    public static InputStream blockingRequest(String url, String headers) throws IOException, URISyntaxException {
         println("Starting request to " + url);
-        URL uri = new URL(url);
+        URL uri = new URI(url).toURL();
         SocketAddress serverAddress = new InetSocketAddress(uri.getHost(), uri.getPort());
         SocketChannel channel = SocketChannel.open(serverAddress);
         ByteBuffer buffer = ByteBuffer.wrap((headers + "Host: " + uri.getHost() + "\r\n\r\n").getBytes());
@@ -121,7 +117,7 @@ public class IO {
         executor.submit(() -> {
             try {
                 println("Starting request to " + url);
-                URL uri = new URL(url);
+                URL uri = new URI(url).toURL();
                 SocketAddress serverAddress = new InetSocketAddress(uri.getHost(), uri.getPort());
                 AsynchronousSocketChannel channel = AsynchronousSocketChannel.open(group);
 
@@ -151,7 +147,7 @@ public class IO {
                                                 attachment.flip();
                                                 byte[] data = new byte[attachment.limit()];
                                                 attachment.get(data);
-                                                println("data " + data);
+                                                println("data " + Arrays.toString(data));
                                                 if (handler != null) handler.received(data);
                                                 attachment.flip();
                                                 attachment.clear();
@@ -161,7 +157,7 @@ public class IO {
                                             } else if (read < 0) {
                                                 try {
                                                     channel.close();
-                                                } catch (IOException e) {
+                                                } catch (IOException _) {
                                                 }
                                                 println("complete!");
                                                 if (handler != null) handler.completed();
@@ -176,7 +172,7 @@ public class IO {
                                             err("Read failed");
                                             try {
                                                 channel.close();
-                                            } catch (IOException e) {
+                                            } catch (IOException _) {
                                             }
                                             if (handler != null) handler.failed(t);
                                         }
@@ -189,7 +185,7 @@ public class IO {
                                 err("Write failed");
                                 try {
                                     channel.close();
-                                } catch (IOException e) {
+                                } catch (IOException _) {
                                 }
                                 if (handler != null) handler.failed(t);
                             }
@@ -201,7 +197,7 @@ public class IO {
                         err("Connect failed");
                         try {
                             channel.close();
-                        } catch (IOException e) {
+                        } catch (IOException _) {
                         }
                         if (handler != null) handler.failed(t);
                     }
@@ -216,14 +212,14 @@ public class IO {
 
     //<editor-fold desc="reactive (asynchronous non thread-blocking request)">
     public static HttpClient httpClient;
+    public static TcpClient tcpClient;
     public static Logger reactiveLogger = Loggers.getLogger("http-client");
 
-    public static void init_Chapter04_Reactive() throws SSLException {
+    public static void init_Chapter04_Reactive_Http() throws SSLException {
 //        Loggers.useConsoleLoggers();
         httpClient = HttpClient
             .create(
                 ConnectionProvider.builder("plop")
-//                    .maxConnections(1)
                     .maxConnections(Integer.MAX_VALUE)
                     .pendingAcquireTimeout(Duration.ofMillis(0))
                     .pendingAcquireMaxCount(-1)
@@ -232,38 +228,54 @@ public class IO {
                     .build()
             )
             .keepAlive(false)
-            .responseTimeout(Duration.ofSeconds(30))
-            .protocol(HttpProtocol.HTTP11)
-            .wiretap(true)
-//            .secure(SslProvider.builder()
-//                .sslContext(SslContextBuilder.forClient().build())
-//                .handshakeTimeoutMillis(600_000)
-//                .build()
-//            )
-            .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 300_000)
-            .doOnConnected(conn -> conn
-                .addHandlerLast(new ReadTimeoutHandler(300, TimeUnit.SECONDS))
-                .addHandlerLast(new WriteTimeoutHandler(300, TimeUnit.SECONDS)))
+            .wiretap("logger-name", LogLevel.DEBUG, AdvancedByteBufFormat.TEXTUAL)
         ;
         httpClient.warmup().block();
     }
 
-    public static Flux<byte[]> reactiveRequest(String url) {
-        return Mono.fromCallable(() -> {
-            println("Starting request to " + url);
-            var uri = url;
-//            var uri = "https://httpbin.org/status/200";
-            return new URL(uri);
-        }).flatMapMany(uri -> httpClient.get()
-            .uri(uri.toString())
-            .responseContent()
-            .asByteArray()
-            .doOnNext(bytes -> println("read " + bytes.length + " bytes."))
-            .doOnError(t -> err("req error " + t.getClass() + " ---- " + t.getMessage()))
-            .doOnCancel(() -> err("req cancelled " + url))
-            .log(reactiveLogger)
-        );
+    public static void init_Chapter04_Reactive_Tcp() throws SSLException {
+        tcpClient = TcpClient
+            .create()
+        ;
+        tcpClient.warmup().block();
     }
+
+    public static Flux<byte[]> reactiveTcpRequest(String url, String headers) {
+        return Mono.fromCallable(() -> {
+                println("Starting request to " + url);
+                return new URI(url).toURL();
+            })
+            .flatMapMany(uri ->
+                tcpClient
+                    .host(uri.getHost())
+                    .port(uri.getPort())
+                    .connect()
+                    .flatMapMany(c -> c.outbound()
+                        .sendString(Mono.just(headers + "Host: " + uri.getHost() + "\r\n\r\n"))
+                        .then()
+                        .thenMany(Flux.defer(() -> c.inbound().receive().asByteArray()))
+                    )
+            )
+            ;
+    }
+
+    public static Flux<byte[]> reactiveHttpRequest(String url) {
+        return Mono.fromCallable(() -> {
+                println("Starting request to " + url);
+                return url;
+            })
+            .flatMapMany(uri -> httpClient.get()
+                .uri(uri)
+                .responseContent()
+                .asByteArray()
+//                .doOnNext(bytes -> println("read " + bytes.length + " bytes."))
+                .doOnError(t -> err("req error " + t.getClass() + " ---- " + t.getMessage()))
+                .doOnCancel(() -> err("req cancelled " + url))
+//                .log(reactiveLogger)
+            )
+            ;
+    }
+
     //</editor-fold>
 
     //<editor-fold desc="synchronous fiber-blocking (non thread-blocking) request">
@@ -366,8 +378,8 @@ public class IO {
     //</editor-fold>
 
     //<editor-fold desc="InputStream utils">
-    private static final Pattern available = Pattern.compile("(?i)^Available[(]token=(?<token>[0-9]+)[)]");
-    private static final Pattern unavailable = Pattern.compile("(?i)^Unavailable[(]eta=(?<eta>[0-9]+),wait=(?<wait>[0-9]+),token=(?<token>[0-9]+)[)]");
+    private static final Pattern available = Pattern.compile("(?is).*Available[(]token=(?<token>[0-9]+)[)]");
+    private static final Pattern unavailable = Pattern.compile("(?is).*Unavailable[(]eta=(?<eta>[0-9]+),wait=(?<wait>[0-9]+),token=(?<token>[0-9]+)[)]");
 
     public static Connection parseToken(CheckedSupplier<InputStream> response) {
 //        StringBuilder builder = new StringBuilder();
@@ -378,23 +390,7 @@ public class IO {
             while ((length = is.read(buffer)) != -1) {
                 result.write(buffer, 0, length);
             }
-            return parseConnection(result.toString(StandardCharsets.UTF_8.name()).substring(34));
-        } catch (IOException e) {
-            e.printStackTrace();
-            throw new IllegalStateException("No token");
-//        }
-//        try (Reader reader = new BufferedReader(new InputStreamReader
-//            (response.get(), Charset.forName(StandardCharsets.UTF_8.name())))) {
-//            int c = 0;
-//            while ((c = reader.read()) != -1) {
-//                builder.append((char) c);
-//            }
-//            return parseConnection(builder.toString().substring(34));
-//        } catch (IOException e) {
-//            // ignore: I just want latency
-//            e.printStackTrace();
-//
-//            throw new IllegalStateException("No token");
+            return parseConnection(result.toString(StandardCharsets.UTF_8).substring(34));
         } catch (Exception e) {
             e.printStackTrace();
             throw new IllegalStateException("No token");
@@ -417,8 +413,9 @@ public class IO {
                 m.group("token")
             );
         }
+//        println("token did not match");
 
-        throw new IllegalStateException("Wrong token");
+        throw new IllegalStateException("Wrong token: " + resp);
     }
 
     public static void ignoreContent(InputStream content) throws IOException {
@@ -435,7 +432,7 @@ public class IO {
     public static void ignoreResponse(CheckedSupplier<InputStream> response) {
         try (InputStream is = response.get()) {
             ignoreContent(is);
-        } catch (IOException e) {
+        } catch (Exception e) {
             // ignore: I just want latency
         }
     }
